javascript comments, html content, css style

--- a/index.html
+++ b/index.html
@@ -3,11 +3,30 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
-    <link href="styles.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
   </head>
   <body>
+    <header>
+      <img src="3a83cd51-banner.jpg" alt="">
+    </header>
+    <main>
+      <ul>
+        <li id="header">Answer 1</li>
+        <li value="1"></li>
+        <li id="header">Answer 2</li>
+        <li value="2"></li>
+        <li id="header">Answer 3</li>
+        <li value="3"></li>
+        <li id="header">Answer 4</li>
+        <li value="4"></li>
+        <li id="header">Answer 5</li>
+        <li value="5"></li>
+        <li id="header">Answer 6</li>
+        <li value="6"></li>
+      </ul>
+    </main>
     <script src="items.js" charset="utf-8"></script>
     <script src="main.js" charset="utf-8"></script>
   </body>
