completed js assignments

--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
     <main>
       <ul>
         <li id="header">Answer 1</li>
-        <li value="1"></li>
+        <li id="one"></li>
         <li id="header">Answer 2</li>
-        <li value="2"></li>
+        <li id="two"><ul id="twol"></ul></li>
         <li id="header">Answer 3</li>
-        <li value="3"></li>
+        <li id="three"></li>
         <li id="header">Answer 4</li>
-        <li value="4"></li>
+        <li id="four"><ul id="fourl"></ul></li>
         <li id="header">Answer 5</li>
-        <li value="5"></li>
+        <li id="five"><ul id="fivel"></ul></li>
         <li id="header">Answer 6</li>
-        <li value="6"></li>
+        <li id="six"></li>
       </ul>
     </main>
-    <script src="items.js" charset="utf-8"></script>
-    <script src="main.js" charset="utf-8"></script>
+    <script src="items.js" type="text/javascript" charset="utf-8"></script>
+    <script src="main.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
